--- a/index.html
+++ b/index.html
@@ -1,5 +1,36 @@
-DevChallenge
-Home Features Contact
-Create amazing graphics
-Colaborate and create beautiful graphics with your team
-Start now
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>AmazingGraph</title>
+</head>
+<body>
+    <div class="container">
+        <div class="container-title">
+            <h1 class="logo-name">DevChallenge</h1>
+            <div class="container-navbar">
+                <a href="#">Home</a>
+                <a href="#">Features</a>
+                <a href="#">Contact</a>
+            </div>
+        </div>
+        <div class="container-image">
+            <img class="img-team" src="assets/team.jpg" width="750px" alt="team">
+        </div>
+        
+        <div class="container-text">
+            <p>Create amazing graphics</p>
+            <div class="container-text-span">
+                <span>
+                    Colaborate and create beautiful graphics with your team
+                </span>
+            </div>
+            <button class="button-start">Start now</button>
+        </div>
+            
+    </div>
+</body>
+</html>
